// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User should be able to select normal text style for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select normal text style for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading1 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading1 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading2 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading2 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading3 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading3 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading4 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading4 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading5 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading5 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading6 for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select heading6 for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "content": Array [
        Object {
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;


exports[`User should be able to select Bold on toolbar for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select Bold on toolbar for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select Italic on toolbar for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "em",
            },
          ],
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select Italic on toolbar for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "em",
            },
          ],
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select Underline on toolbar for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "underline",
            },
          ],
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select Underline on toolbar for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "underline",
            },
          ],
          "text": "HELLO_WORLD",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select Clear Formatting on toolbar for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "underline",
            },
          ],
          "text": "test",
          "type": "text",
        },
        Object {
          "text": "cleared",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`User should be able to select Clear Formatting on toolbar for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "underline",
            },
          ],
          "text": "test",
          "type": "text",
        },
        Object {
          "text": "cleared",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
